fix: css text wrap

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -5,6 +5,8 @@ body {
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+
+
   }
   
   code {
@@ -20,6 +22,11 @@ body {
   }
   
   .App {
+    display: flex;
     width: 90%;
     max-width: 800px;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+
   }
