--- a/src/components/messages/messages.css
+++ b/src/components/messages/messages.css
@@ -22,6 +22,8 @@
     padding: 10px 15px 15px;
     color: black;
     margin-bottom: 2px;
+    max-width: 200px;
+    overflow-wrap: anywhere;
   }
 
   .my-message p {
