--- a/src/components/online-users/online-users.css
+++ b/src/components/online-users/online-users.css
@@ -1,9 +1,10 @@
 .online-users {
     border-right: 1px solid rgba(159, 183, 197, 0.1);
     padding: 20px;
-    width: 200px;
+    width: 180px;
     background-color: yellow;
     overflow: auto;
+
   }
 
 .online-users ul {
